# CPC_PICOROM

./: .gitignore  .gitmodules  CMakeLists.txt  fatfs_driver.c  flash.c  flash.h  latch.pio  licence.md  main.c  makeroms.sh  memmap_custom.ld  readme.md  usb_msc_driver.c
fatfs/source/: ffconf.h
firmware/: cpc_rom_emulator.uf2  cpc_rom_emulator_200.uf2  cpc_rom_emulator_210.uf2  cpc_rom_emulator_220.uf2  cpc_rom_emulator_230.uf2  cpc_rom_emulator_240.uf2  cpc_rom_emulator_250.uf2  cpc_rom_emulator_260.uf2  cpc_rom_emulator_270.uf2  picorom.rom
romsets/: .DEFAULT.CFG.swp  DEFAULT.CFG  DES.CFG  GAMES1.CFG  GAMES2.CFG  GAMES3.CFG
romtool/: romtool.ini  romtool.py
src/: CMakeLists.txt  FlashInterfaceRP2040_SDK.h  bootsel_button.h  fatfs_driver.c  flash.c  flash.cpp  flash.h  main.c  memmap_custom.ld  usb_msc_driver.c
src/fatfs/source/: ffconf.h
src/z80/: picorom.s
z80/: Makefile  picorom.s
